# kernelDensityEstimator

./: .gitmodules  CMakeLists.txt  library.h
kernels/: CMakeLists.txt  epanecznikowKernel.cpp  epanecznikowKernel.h  linearKernel.cpp  linearKernel.h  normalKernel.cpp  normalKernel.h  triangularKernel.cpp  triangularKernel.h
src/: kernelDensityEstimator.cpp  kernelDensityEstimator.h  parametrizedWeightedKernelDensityEstimator.cpp  parametrizedWeightedKernelDensityEstimator.h  weightedKernelDensityEstimator.cpp  weightedKernelDensityEstimator.h  weightedKernelDensityEstimator_tests.h
src/bandwidthCalculators/: i_bandwidthCalculator.h  pluginBandwidthCalculator.cpp  pluginBandwidthCalculator.h  weightedPluginBandwidthCalculator.cpp  weightedPluginBandwidthCalculator.h
src/bandwidthDesignators/: i_bandwidthDesignator.h  pluginBandwidthCalculator.cpp  pluginBandwidthCalculator.h
src/kernels/: CMakeLists.txt  epanecznikowKernel.cpp  epanecznikowKernel.h  kernels.h  linearKernel.cpp  linearKernel.h  normalKernel.cpp  normalKernel.h  productKernel.cpp  productKernel.h  triangularKernel.cpp  triangularKernel.h
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  kernelDensityEstimator_tests.cpp  parametrizedWeightedKernelDensityEstimator_tests.cpp  weightedKernelDensityEstimator_tests.cpp
tests/src/bandwidthCalculators/: pluginBandwidthCalculator_tests.cpp  weightedPluginBandwidthCalculator_tests.cpp
tests/src/kernels/: epanecznikowKernel_tests.cpp  linearKernel_tests.cpp  normalKernel_test.cpp  normalKernel_tests.cpp  productKernel_tests.cpp  triangularKernel_tests.cpp
